# Path_Planning_Algorithms_Comparison

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
drone_params/: default.params  no_gps.params
new_models/: city_pack_3.sdf  nb_park_modified.sdf  nb_park_world.sdf
new_models/city_pack_3/: model.config
new_models/iris_with_camera/: model.sdf
new_models/my_gimbal/: model.sdf
new_models/my_iris/: model.sdf
new_models/worlds/city_pack_3/: model.config  model.sdf
new_models/worlds/uav_in_city/: uav_in_city.sdf
python_scripts/: THRUST_CALIBRATION_GUIDE.md  attitude_control.py  keyboard_control.py  keyboard_example.py  mavros_example.py  pymavlink_example.py  rviz_visualizations.py  sending_vo.py  thrust_calibration.py
python_scripts/VisualOdometry/: visual_odometry.py
python_scripts/VisualOdometry/lib/visualization/: plotting.py
src/gps_denied_nav/: CMakeLists.txt  package.xml
src/gps_denied_nav/config/: drone_sim.rviz
src/gps_denied_nav/include/gps_denied_nav/: drone_mav_connection.hpp
src/gps_denied_nav/launch/: gps_denied_nav.launch.py
src/gps_denied_nav/src/: detect_features_orb.cpp  detect_features_sift.cpp  detect_features_surf.cpp
src/gps_denied_nav/src/drone_control/: drone_control_node.cpp  drone_mav_connection.cpp
src/opencv_example/: CMakeLists.txt  package.xml
src/opencv_example/src/: example_opencv_node.cpp  orb_example.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/include/: example_window.h  grid_widget.hpp
src/path_planner/src/: example_window.cpp  grid_widget.cpp  main.cpp
src/path_planner/ui/: example_window.ui
src/uav_vslam/: CMakeLists.txt  package.xml
src/uav_vslam/config/: drone_sim.rviz  mavros_config.yaml  ros_gz_bridge.yaml
src/uav_vslam/launch/: uav_vslam.launch.py  uav_vslam.launch.xml
src/uav_vslam/rviz/: drone_sim.rviz
src/uav_vslam/src/: detect_features_from_video.cpp  save_video.cpp
